# BgScrambler

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
bg_scrambler/: scrambler.py
bg_scrambler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
